--- a/src/main/webapp/resources/css/admin_inquire.css
+++ b/src/main/webapp/resources/css/admin_inquire.css
@@ -11,11 +11,6 @@
     width: 800px;
     margin: 0 auto;
 }
-#adm_inquire_table td{
-	overflow:hidden;
-	white-space : nowrap;
-	text-overflow: ellipsis;
-}
 .inq_list_underline {
 	border-bottom: .5px dotted gray;
 	padding: .5em .2em;
@@ -44,4 +39,15 @@
 }
 #search_field_handling{
 	height:24.4px;
+}
+#inq_cont_td{
+   overflow: hidden;
+   display: -webkit-box; 
+   white-space: normal;    
+   word-wrap: break-word;   
+   text-overflow: ellipsis;
+   -webkit-line-clamp: 1;
+   -webkit-box-orient: vertical;
+   height: 38px;
+   line-height: 38px;
 }
