--- a/src/main/webapp/resources/css/inquire.css
+++ b/src/main/webapp/resources/css/inquire.css
@@ -11,6 +11,43 @@ body{
 
 
 }
+.file_name{
+	display: inline-block;
+	padding: .2em .75em; /* label의 패딩값과 일치 */ 
+	font-size: 14px; 
+	font-family: inherit; 
+	line-height: normal; 
+	vertical-align: middle; 
+	background-color: #f5f5f5; 
+	border: 1px solid #ebebeb; 
+	border-bottom-color: #e2e2e2; 
+	-webkit-appearance: none; /* 네이티브 외형 감추기 */ 
+	-moz-appearance: none; 
+	appearance: none;
+	margin-bottom:5px;
+}
+.inq_wrap_upload label{
+	display: inline-block; 
+	padding: .2em .75em; 
+	color: #999; 
+	font-size: 14px; 
+	line-height: normal; 
+	vertical-align: middle; 
+	background-color: #fdfdfd; 
+	border: 1px solid #ebebeb; 
+	border-bottom-color: #e2e2e2; 
+	margin-bottom:5px;
+}
+.inq_inp_file{
+	position: absolute; 
+	width: 1px; 
+	height: 1px; 
+	padding: 0; 
+	margin: -1px; 
+	overflow: hidden; 
+	clip:rect(0,0,0,0); 
+	border: 0;
+}
 .inq_vali_date{
 	width:280px;
 	height:20px;
@@ -172,7 +209,7 @@ body{
     letter-spacing: -1px;
 }
 .inq_info_question label{
-	cursor: default;
+	cursor: pointer;
 }
 .inq_link_more{
 	color: #2c91ef;
