--- a/src/main/webapp/resources/css/offer_author.css
+++ b/src/main/webapp/resources/css/offer_author.css
@@ -11,6 +11,24 @@
 ::selection {
 	background:#f57c689e;
 }
+
+/*로딩화면을 위한 css*/
+.wrap-loading{ /*화면 전체를 어둡게 합니다.*/
+    position: fixed;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    background: rgba(0,0,0,0.8);
+}
+.wrap-loading div{ /*로딩 이미지*/
+    position: fixed;
+    top:50%;
+    left:50%;
+    margin-left: -21px;
+    margin-top: -21px;
+}
+
 #offer_wrap {
 	width:750px;
 	height:auto;
@@ -67,6 +85,7 @@
 }
 
 .req_label {
+	font-size:14px;
 	margin-right:30px;
 	vertical-align:text-bottom;
 }
@@ -80,7 +99,7 @@
 }
 
 .offer_info {
-	width:500px;
+	width:600px;
 	margin:0 auto;
 	padding:5px;
 }
@@ -98,16 +117,35 @@
 }
 
 .offer_text_area {
-	padding:5px;
-	border:1px solid grey;
-	min-height:200px;
-	outline:none;
+	width: 100%; /* 원하는 너비 설정 */
+	height: 350px; /* 높이값 초기화 */
+	resize:none; /* 크기조절 막기 (크롬) */ 
+	line-height : normal; /* line-height 초기화 */
+	padding: .5em .5em; /* 원하는 여백 설정, 상하단 여백으로 높이를 조절 */
+	font-family: inherit; /* 폰트 상속 */
+	border: 1px solid #999;
+	border-radius: 0; /* iSO 둥근모서리 제거 */
+	outline-style: none; /* 포커스시 발생하는 효과 제거를 원한다면 */
+	-webkit-appearance: none; /* 브라우저별 기본 스타일링 제거 */
+	-moz-appearance: none;
+	appearance: none;
+    font-size:13px;
 }
-.offer_text_area:empty::before{
-	content:"작가에게 제안합니다.";
-	size:12pt;
-	color:#a6a6a6;
+
+input[type="text"] {
+	/*width: 100%; /* 원하는 너비 설정 */
+	height: auto; /* 높이값 초기화 */ 
+	line-height : normal; /* line-height 초기화 */
+	padding: .5em .5em; /* 원하는 여백 설정, 상하단 여백으로 높이를 조절 */
+	font-family: inherit; /* 폰트 상속 */
+	border: 1px solid #999;
+	border-radius: 0; /* iSO 둥근모서리 제거 */
+	outline-style: none; /* 포커스시 발생하는 효과 제거를 원한다면 */
+	-webkit-appearance: none; /* 브라우저별 기본 스타일링 제거 */
+	-moz-appearance: none;
+	appearance: none;
 }
+
 .offer_button_wrap {
 	padding:30px 30px 0 30px;
 	margin-top:15px;
@@ -127,4 +165,52 @@
 .offer_btn:hover {
 	background-color:gray;
 	color:#fff;
+}
+
+
+.offer_file {
+	position: absolute; 
+	width: 1px; 
+	height: 1px; 
+	padding: 0; 
+	margin: -1px; 
+	overflow: hidden; 
+	clip:rect(0,0,0,0); 
+	border: 0;
+}
+
+.offer_file_wrap label{
+	display: inline-block; 
+	padding: .2em .75em; 
+	color: #999; 
+	font-size: 14px; 
+	line-height: normal; 
+	vertical-align: middle; 
+	background-color: #fdfdfd; 
+	cursor: pointer; 
+	border: 1px solid #ebebeb; 
+	border-bottom-color: #e2e2e2; 
+	margin-bottom:5px;
+}
+
+.file_name {
+	display: inline-block;
+	padding: .2em .75em; /* label의 패딩값과 일치 */ 
+	font-size: 14px; 
+	font-family: inherit; 
+	line-height: normal; 
+	vertical-align: middle; 
+	background-color: #f5f5f5; 
+	border: 1px solid #ebebeb; 
+	border-bottom-color: #e2e2e2; 
+	-webkit-appearance: none; /* 네이티브 외형 감추기 */ 
+	-moz-appearance: none; 
+	appearance: none;
+	margin-bottom:5px;
+}
+
+.counter_wrap {
+	display:flex;
+	justify-content:flex-end;
+	
 }
