책발간 페이지 - 이미지가 이상한 div에 들어가던것을 수정 - 이미지가 본연의 사이즈로 나오던것을 div사이즈에 맞게 나오도록 수정 - 기타 이미지 css추가 - 같은 작가가 같은 책이름으로 2권을 만들었을때 오류가 나타나는 것을 수정(쿼리문)

--- a/src/main/webapp/resources/css/book_create.css
+++ b/src/main/webapp/resources/css/book_create.css
@@ -48,8 +48,10 @@ a {
 	height: 430px;
 	width: 300px;
 	object-fit: cover;
-	fiter: brightness(50%);
 	background-repeat: no-repeat;
+	background-size: cover;
+    background-position: center;
+	filter:brightness(80%);
 }
 
 #book_create_cover_imgFile {
