1.admin_accuse_info admin_inquire_info 페이지 삭제하기 버튼 만들고 기능 완성 2.admin_accuse admin_inquire 페이지 전체 UI 수정중

--- a/src/main/webapp/resources/css/admin_inquire.css
+++ b/src/main/webapp/resources/css/admin_inquire.css
@@ -11,6 +11,9 @@
     width: 800px;
     margin: 0 auto;
 }
+.adm_inquire_count{
+	padding-bottom:15px;
+}
 .inq_list_underline {
 	border-bottom: .5px dotted gray;
 	padding: .5em .2em;
@@ -27,6 +30,7 @@
 }
 .inq_adm_tr{
 	cursor:pointer;
+	font-size:14px;
 }
 .inq_adm_tr:hover{
 	background-color:aliceblue;
@@ -40,14 +44,17 @@
 #search_field_handling{
 	height:24.4px;
 }
+#adm_inquire_table{
+	margin:auto;
+}
 #inq_cont_td{
    overflow: hidden;
-   display: -webkit-box; 
-   white-space: normal;    
    word-wrap: break-word;   
+   white-space: normal;    
    text-overflow: ellipsis;
+   display: -webkit-box; 
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
-   height: 38px;
-   line-height: 38px;
+   line-height: 24px;
+   height: 22px;
 }
