--- a/src/main/webapp/resources/css/admin_accuse.css
+++ b/src/main/webapp/resources/css/admin_accuse.css
@@ -3,6 +3,9 @@
 .admin_ac_title{
 	margin-left: 50px;
 }
+.adm_accuse_count{
+	padding-bottom:15px;
+}
 .admin_ac_main{
 	display: flex;
     justify-content: center;
@@ -10,10 +13,20 @@
     width: 800px;
     margin: 0 auto;
 }
-#adm_accuse_table td{
-	overflow:hidden;
-	white-space : nowrap;
-	text-overflow: ellipsis;
+#adm_accuse_table{
+	margin:auto;
+	width:800px;
+}
+#ac_cont_td{
+   overflow: hidden;
+   word-wrap: break-word;   
+   white-space: normal;    
+   text-overflow: ellipsis;
+   display: -webkit-box; 
+   -webkit-line-clamp: 1;
+   -webkit-box-orient: vertical;
+   line-height: 24px;
+   height: 22px;
 }
 .ac_list_underline {
 	border-bottom: .5px dotted gray;
@@ -31,6 +44,7 @@
 }
 .ac_adm_tr{
 	cursor:pointer;
+	font-size:14px;
 }
 .ac_adm_tr:hover{
 	background-color:aliceblue;
