글작성 피드, 댓글작성 피드, 답글작성 피드 구현 -> 피드뷰페이지 변경( SQL 에서 피드 보내주는이 컬럼 생성 ) 글읽기 페이지 이전글, 다음글 이동 구현

--- a/src/main/webapp/resources/css/read.css
+++ b/src/main/webapp/resources/css/read.css
@@ -433,6 +433,7 @@ body a {
 	border : 1px solid gray;
 	border-radius : 50px;
 	box-sizing : border-box;
+	cursor:pointer;
 }
 
 .remote_button a:hover {
