--- a/src/main/webapp/resources/css/admin_accuse_info.css
+++ b/src/main/webapp/resources/css/admin_accuse_info.css
@@ -13,6 +13,12 @@
     margin:0 3px;
     margin-top:10px;
 }
+.ac_adm_table2{
+	width:900px;
+}
+.ac_adm_table3{
+	width:900px;
+}
 #ac_adm_button{
 	margin:10px 0;
 	display:flex;
@@ -85,7 +91,7 @@ color:transparent;
     margin-top:60px;
 }
 #ac_adm_complete{
-    width: 856px;
+    width: 900px;
    	margin-top:100px;
 }
 #adm_ac_replyname{
